examples/errors/parsing/booleans-bad-and.cn
main : () [impure] =
  let a = true and false;
  ()
